--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/karaoke
 spring.datasource.username=root
 spring.datasource.password=c0nygre
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.mvc.view.prefix: /
