--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,18 @@
 	</properties>
 
 	<dependencies>
+	<dependency>
+	
+     <groupId>org.jfree</groupId>
+     <artifactId>jfreechart</artifactId>     
+     <version>1.0.19</version> 
+  	</dependency>
+  	
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
